language/move-lang/tests/move_check/typing/uninferred_type_unpack_decl.exp
error: 

   ┌── tests/move_check/typing/uninferred_type_unpack_decl.move:5:13 ───
   │
 5 │         let S{};
   │             ^^^ Could not infer this type. Try adding an annotation
   │

