language/move-lang/tests/move_check/typing/uninferred_type_unpack_decl.move
module M {
    struct S<T> {}

    fun t() {
        let S{};
    }
}
